--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.0",
     "lucide-react": "^0.378.0",
+    "motion": "^12.29.2",
     "next": "14.2.3",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^6.9.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
